# Job-Bot

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  handover.json  pyproject.toml
.github/workflows/: ci.yml
deploy/: jobbot.service
docker/: entrypoint.sh
migrations/: env.py
migrations/versions/: 0001_initial.py
src/jobbot/: __init__.py  config.py  health.py  logging.py  main.py
src/jobbot/bot/: __init__.py  client.py  embeds.py  permissions.py  views.py
src/jobbot/bot/cogs/: jobs.py
src/jobbot/db/: __init__.py  base.py  models.py  repositories.py  session.py
src/jobbot/dedup/: __init__.py  detector.py
src/jobbot/expiration/: __init__.py  checker.py
src/jobbot/parsing/: __init__.py  extractor.py  fetcher.py  jsonld.py  models.py  sanitize.py  ssrf.py  url.py
src/jobbot/queries/: __init__.py  generator.py  terms.py
src/jobbot/scheduler/: __init__.py  runner.py
src/jobbot/scoring/: __init__.py  keywords.py  llm.py  relevance.py
src/jobbot/search/: __init__.py  base.py  bing.py  brave.py  google_pse.py  manager.py  mock.py  models.py  serper.py
src/jobbot/services/: __init__.py  job_service.py  scan_service.py  settings_service.py
tests/: conftest.py  test_dedup.py  test_expiration.py  test_extractor.py  test_permissions.py  test_platforms.py  test_queries.py  test_scoring.py  test_search.py  test_url.py
tests/fixtures/: ashby.html  greenhouse.html  lever.html  smartrecruiters.html  workable.html  workday.html
