[project]
name = "jobbot"
version = "0.1.0"
description = "Discord bot that discovers software engineering internships and posts them to Discord channels."
requires-python = ">=3.12"
dependencies = [
    "discord.py>=2.4",
    "SQLAlchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "asyncpg>=0.29",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "APScheduler>=3.10",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "selectolax>=0.3.21",
    "structlog>=24.1",
    "tenacity>=8.3",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
playwright = ["playwright>=1.44"]
llm = ["anthropic>=0.34"]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.5",
]

[project.scripts]
jobbot = "jobbot.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jobbot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
ignore = ["E501"]
